--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ng2-breadcrumb",
-  "version": "0.5.14",
+  "name": "ng2-breadcrumb-fixed",
+  "version": "0.5.15",
   "description": "A component that creates a breadcrumb trail for router paths",
   "scripts": {
     "start": "tsc && concurrently \"npm run ngc\" \"npm run lite\" ",
